deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel5
  namespace: laravel5
  labels:
    name: laravel5
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
    #    nodePort: 30103
    #type: NodePort
  selector:
    app: laravel5
