deploy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel5-ingress
  namespace: laravel5
  labels:
    k8s-app: laravel5-ingress
  #annotations:
  #  kubernetes.io/ingress.class: nginx
  #  kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: laravel5.rapide.software
      http:
        paths:
          - backend:
              serviceName: laravel5
              servicePort: 80
            path: /
  #tls:
  #  - hosts:
  #      - "laravel5.rapide.software"
  #    secretName: laravel5-service-tls
